Fix scrollbar behavior

--- a/pure_pazaak/src/index.css
+++ b/pure_pazaak/src/index.css
@@ -54,5 +54,6 @@
 
 body {
   margin: 0;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
